force-app/main/default/objects/ANZARD_Data__c/fields/PR_TOP__c.field-meta.xml
<CustomField>
    <fullName>PR_TOP__c</fullName>
    <label>PR_TOP</label>
    <length>1</length>
    <type>Text</type>
</CustomField>