force-app/main/default/objects/ANZARD_Data__c/fields/PREG_20W__c.field-meta.xml
<CustomField>
    <fullName>PREG_20W__c</fullName>
    <formula>IF( TEXT(CYCLE_ID__r.Patient__r.Any_Pregnancies_of_20_Weeks_Gestation__c) = NULL, &quot;u&quot;, LEFT(TEXT(CYCLE_ID__r.Patient__r.Any_Pregnancies_of_20_Weeks_Gestation__c),1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PREG_20W</label>
    <type>Text</type>
</CustomField>