force-app/main/default/objects/ANZARD_Data__c/fields/SP_QUAL__c.field-meta.xml
<CustomField>
    <fullName>SP_QUAL__c</fullName>
    <label>SP_QUAL</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>