force-app/main/default/objects/ANZARD_Data__c/fields/SP_SITE__c.field-meta.xml
<CustomField>
    <fullName>SP_SITE__c</fullName>
    <label>SP_SITE</label>
    <length>1</length>
    <type>Text</type>
</CustomField>