force-app/main/default/objects/ANZARD_Data__c/fields/SP_SOURCE__c.field-meta.xml
<CustomField>
    <fullName>SP_SOURCE__c</fullName>
    <formula>LEFT(TEXT( CYCLE_ID__r.Sperm_Source__c ),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SP_SOURCE</label>
    <type>Text</type>
</CustomField>