force-app/main/default/objects/ANZARD_Data__c/fields/STIM_1ST__c.field-meta.xml
<CustomField>
    <fullName>STIM_1ST__c</fullName>
    <formula>LEFT(TEXT( CYCLE_ID__r.First_FSH_Cycle__c) ,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>STIM_1ST</label>
    <type>Text</type>
</CustomField>