force-app/main/default/objects/ANZARD_Data__c/fields/SURR__c.field-meta.xml
<CustomField>
    <fullName>SURR__c</fullName>
    <formula>IF(CONTAINS((CYCLE_ID__r.RecordType.Name), &quot;Surrogacy&quot;), &quot;y&quot;, &quot;n&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SURR</label>
    <type>Text</type>
</CustomField>