force-app/main/default/objects/ANZARD_Data__c/fields/WEIGHT_F__c.field-meta.xml
<CustomField>
    <fullName>WEIGHT_F__c</fullName>
    <formula>IF( CYCLE_TYPE__c = &quot;8&quot;, NULL, TEXT(CYCLE_ID__r.Weight_on_Day_1__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WEIGHT_F</label>
    <type>Text</type>
</CustomField>