force-app/main/default/objects/ANZARD_Data__c/listViews/All_ANZARD.listView-meta.xml
<ListView>
    <fullName>All_ANZARD</fullName>
    <columns>NAME</columns>
    <columns>CYCLE_ID__c</columns>
    <columns>CYCLE_TYPE__c</columns>
    <columns>CYC_DATE__c</columns>
    <columns>PARENT_SEX__c</columns>
    <columns>ART_REASON__c</columns>
    <columns>HEIGHT_F__c</columns>
    <filterScope>Everything</filterScope>
    <label>All ANZARD</label>
</ListView>